fixed button for like-icon, gaps and some properties for better pixel perfect

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,6 +38,7 @@ input {
   padding-inline: 0;
   padding-block: 0;
   border: none;
+  appearance: none;
 }
 
 ul,
