--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,7 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  padding-block-end: 23px;
+  padding-block-end: 25px;
 }
 
 .header__logo {
@@ -74,8 +74,9 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 8px;
-  padding-block-end: 21px;
+  gap: 0.8em;
+  padding-block-end: 22px;
+  font-size: var(--secondary-font-size);
 }
 
 .theme-menu__button {
@@ -144,7 +145,7 @@
   flex-direction: column;
   gap: 50px;
   margin-block-start: 100px;
-  margin-block-end: 50px;
+  margin-block-end: 51px;
 }
 
 .card {
@@ -207,15 +208,15 @@
 .card__text-container {
   display: flex;
   flex-direction: column;
-  gap: 28px;
+  gap: 1.556em;
   padding-inline: 25px;
   padding-block-start: 26px;
+  font-size: var(--primary-font-size);
 }
 
 .card__text {
   font-family: inherit;
   font-weight: var(--reg-font-weight);
-  font-size: var(--primary-font-size);
   line-height: 21px; /*по какой-то невероятной причине высота блоков перестает сходиться с макетом при 116.667% */
 }
 
@@ -226,7 +227,7 @@
   gap: 5px;
   padding-inline-end: 25px;
   padding-block-start: 24px;
-  padding-block-end: 20px;
+  padding-block-end: 24px;
 }
 
 /* Отдельный стиль для классических/дефолтных на вид кнопок, чтобы не дублировать анимации для разных классов*/
@@ -270,6 +271,9 @@
 /* Стили для кнопки-иконки в виде сердца */
 
 .card__icon-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: 2px solid transparent;
   background: transparent;
   transition: border 0.3s ease;
